Added rows, columns, and background colors.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
           </div>
         </div>
     </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h2 class="panel-title">Git and GitHub</h2>
-      </div>
-      <div class="panel-body">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+              <h2 class="panel-title">Git and GitHub</h2>
+            </div>
+            <div class="panel-body">
         <ul>
           <li>Initializing local Git repository, and create remote GitHub repositories.</li>
           <li>Tracking and committing changes with Git.</li>
@@ -47,11 +49,13 @@
           <li>Branching a project to make multiple copies.</li>
           <li>Merging multiple Git branches back together.</li>
           <li>Cloning down a project from GitHub to my local machine.</li>
-          <li class="bg-success">Publishing a website on GitHub pages.</li>
+          <li>Publishing a website on GitHub pages.</li>
         </ul>
       </div>
+      </div>
     </div>
-    <div class="panel panel-default">
+    <div class="col-md-6">
+    <div class="panel panel-info">
         <div class="panel-heading">
           <h2 class="panel-title">Git and GitHub</h2>
         </div>
@@ -63,8 +67,10 @@
             <li>Branching a project to make multiple copies.</li>
             <li>Merging multiple Git branches back together.</li>
             <li>Cloning down a project from GitHub to my local machine.</li>
-            <li class="bg-success">Publishing a website on GitHub pages.</li>
+            <li>Publishing a website on GitHub pages.</li>
+          </div>
           </ul>
+        </div>
         </div>
       </div>
 
